fix z-index problem

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -25,10 +25,8 @@
   html,
   body {
     overflow: hidden;
-    font-family: CascadiaCode;
-    background-color: var(--black);
+    font-family: CascadiaCode;  
   }
-
   /* Variables */
 
 :root{
